# localzero-generator-core

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: ci.yaml
commands/: cmd_ready_to_rock.py
