[tool.poetry]
name = "generatorcore"
version = "1.0.0"
description = "LocalZero Generator core."
authors = ["Benedikt Grundmann <benedikt.grundmann@gmail.com>","Anja Höhne","Anne Klenge","Jan Kuhlem",
          "Sebastian Lüttig","Silvan Ostheimer","Hauke Schmülling","Leon Schomburg <Leon.Schomburg.ext@germanzero.de>",
          "Manfred Schüssler","Anne Schwob", "Eckhard Weißhaar","Jeniffer Wessel"]
include = [
  "generatorcore/py.typed"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.17.0"
black = "^22.3.0"
pytest-cov = "^3.0.0"
pyright = "^1.1.233"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.pyright]
include = ["generatorcore", "commands", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
